[metadata]
name = nekos.best
description = Simple wrapper around the nekos.best api, supports sync and async envs
version = attr: nekosbest.nekosbestconfig.__version__
liscence = MIT
liscence_file = LISCENCE
long_description = file: README.md
long_description_content_type = text/markdown
author = waifusempire
url = https://github.com/waifusempire/nekos.best

[options]
include_package_data = False
packages = find_namespace:
python_requires = >=3.8
install_requires = 
  aiohttp
  requests

[options.packages.find]
include = nekosbest
